Stop Firefox announcement overflowing viewport
Fixes an issue where long announcement messages caused the right-hand
sidebar to and associated icons to be pushed outside the viewport due
to how non-wrapping whitespace was interacting with flex layout.

As a tradeoff, this commit causes overflowing text to no longer be
displayed with a nice ellipsis in other browsers, simply cutting it
short instead.

--- a/packages/rocketchat-theme/client/imports/general/base_old.css
+++ b/packages/rocketchat-theme/client/imports/general/base_old.css
@@ -1699,8 +1699,6 @@
 
 	cursor: pointer;
 	text-align: center;
-	white-space: nowrap;
-	text-overflow: ellipsis;
 
 	color: var(--rc-color-content);
 
